Fixing z-index of header version two, was on top of mcmodal layer (#22)

--- a/src/styles/experiments/_header-version-two.scss
+++ b/src/styles/experiments/_header-version-two.scss
@@ -22,7 +22,7 @@
   transition: none;
   min-height: 0;
   padding: 0;
-  z-index: 1001;
+  z-index: 122; // mc-modal is indexed at 123
 
   #mobile-nav-button {
     top: 4px;
